// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component 1`] = `
<div>
  <img
    alt="logo"
    height="16px"
    src="./images/logo.svg"
    width="16px"
  />
  hello, world!
  <br />
  <input
    onChange={[Function]}
    value=""
  />
</div>
`;

exports[`App component 2`] = `
<div>
  <img
    alt="logo"
    height="16px"
    src="./images/logo.svg"
    width="16px"
  />
  test text
  <br />
  <input
    onChange={[Function]}
    value="test text"
  />
</div>
`;
